--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-16  Thomas Tanner  <tanner@gmx.de>
+
+	* updated
+	* ltmain.in: fixed hardcoding for libraries
+	
 1999-03-13  Thomas Tanner  <tanner@gmx.de>
 
 	* updated
