--- a/NEWS
+++ b/NEWS
@@ -8,10 +8,11 @@ New in 1.3pre: CVS version; 1.3: 1999-?-?, Libtool team:
 * New demos and tests
 * Various bugfixes
 
-New in 1.2e: CVS version; 1.2f: 1999-?-?, Libtool team:
+New in 1.2e: CVS version; 1.2f: 1999-03-15, Libtool team:
 * libtool will correctly link uninstalled libraries into programs
   and prefer uninstalled libraries to installed ones
-* Library paths that are in the system search path are no longer hardcoded.
+* Library paths that are in the system default run-time search path
+  are no longer hardcoded into executables.
 * New fast installation mode, which links the final executable
   in order to avoid relinking during installation.
   Programs in the build-tree are relinked when executed.
