* Makefile.am (EXTRA_DIST): add mkstamp Reported by Xavier Pianet <xavier@xingo.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 1999-03-16  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* Makefile.am (EXTRA_DIST): add mkstamp
+	Reported by Xavier Pianet <xavier@xingo.com>
+
+1999-03-16  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
 	* Makefile.am (EXTRA_DIST): add ChangeLog.0
 
 1999-03-16  Thomas Tanner  <tanner@gmx.de>
