--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-03-16  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltmain.in (deplibs, beos*): don't append -lc
+	Reported by Xavier Pianet <xavier@xingo.com>
+
 	* tests/build-relink.test (hardcode_action): when set to relink,
 	skip the test with lt-hell
 
