* doc/PLATFORMS: egcs is gcc; updates from Erez Zadoc

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,17 @@
+1999-03-17  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* doc/PLATFORMS: egcs is gcc; updates from Erez Zadoc
+
 1999-03-16  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* ltmain.in (deplibs, beos*): don't append -lc
 	Reported by Xavier Pianet <xavier@xingo.com>
-
-1999-03-16  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* tests/build-relink.test (hardcode_action): when set to relink,
 	skip the test with lt-hell
 
 	* Makefile.am (EXTRA_DIST): add mkstamp
 	Reported by Xavier Pianet <xavier@xingo.com>
-
-1999-03-16  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* Makefile.am (EXTRA_DIST): add ChangeLog.0
 
