--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 1999-03-17  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltconfig.in (hpux*, hardcode_minus_L): should be no, we have +b
+	(hpux*, hardcode_libdir_separator): set to colon
+
+1999-03-17  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
 	* doc/PLATFORMS: egcs is gcc; updates from Erez Zadoc
 
 1999-03-16  Alexandre Oliva  <oliva@dcc.unicamp.br>
