--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,16 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 1.3a: CVS version, Libtool team:
-* Nothing so far
-
+* Complete inter-library dependencies support. It's now possible
+  to link libtool libraries against other libtool libraries.
+* Already-installed libtool libraries will be found.
+* Support for linking DLLs on Win32
+* New demos and tests
+* Various bugfixes
+
 New in 1.2g: CVS version, Libtool team:
 * Nothing so far
-
+
 New in 1.2e: CVS version; 1.2f: 1999-03-15, Libtool team:
 * libtool will correctly link uninstalled libraries into programs
   and prefer uninstalled libraries to installed ones
