--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-03-19  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* tests/noinst-link.test: new test
+	* tests/Makefile.am (TESTS): added noinst-link.test
+	* doc/libtool.texi: document it
+
 1999-03-18  Thomas Tanner  <tanner@gmx.de>
 
 	* NEWS: improved support for BeOS and Cygwin
