--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-03-19  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* tests/noinst-link.test: new test
+	* tests/Makefile.am (TESTS): added noinst-link.test
+	* doc/libtool.texi: document it
+
 1999-03-19  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
 
 	* ltmain.in (dependency_libs): There is no reason to infer that
