* doc/libtool.texi: reorder tests to reflect execution order

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-03-19  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* doc/libtool.texi: reorder tests to reflect execution order
+
+1999-03-19  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
 	* tests/noinst-link.test: new test
 	* tests/Makefile.am (TESTS): added noinst-link.test
 	* doc/libtool.texi: document it
