--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 1999-03-19  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* tests/*.test: when a test fails, skip tests that depend on it.
+	If a certain configuration is not supported, skip all its tests.
+
+1999-03-19  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
 	* doc/libtool.texi: reorder tests to reflect execution order
 
 1999-03-19  Alexandre Oliva  <oliva@dcc.unicamp.br>
